Commit 02: actualización de los Markdown

--- a/mi_tienda.ipynb
+++ b/mi_tienda.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Conexión a la base de datos mariaDB."
+    "# ***Proyecto ETL: Mi Tienda.***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Conexión a la **base de datos mariaDB.**"
    ]
   },
   {
@@ -24,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Extracción de la información de la base de datos mariaDB."
+    "### 2. **Extracción** de la información de la base de datos mariaDB."
    ]
   },
   {
@@ -231,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Transformación de datos (revisión de valores nulos y outliers)."
+    "### 3. **Transformación** de datos (revisión de valores nulos y outliers)."
    ]
   },
   {
@@ -297,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Conexión a la base de datos postgreSQL."
+    "### 4. Conexión a la **base de datos postgreSQL.**"
    ]
   },
   {
